# cpp_base_project

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .mdlrc.rb  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  CMakePresets.json  README.md  cmake.properties  requirements-dev.txt
